Fix Navbar color and alignmet

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,11 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+#Start{
+    align-items: flex-start;
+}
+
+#Head{
+    align-items: flex-start;
+    background-color: black;
+}
